@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.754 2003/02/21 22:33:11 jonnymind Exp $
+ * $Id: ChangeLog,v 1.755 2003/02/22 01:30:33 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-02-22 02:55 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/hbrandom.c
+    ! Strange, BCC continued to complain about it. Changed the name
+      of the internal function from hb_random() to hb_random_num() and
+      all went fine.
+      Probably, the HB_FUNC macro has something do do with that.
 
 2003-02-22 02:30 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/hbrandom.c
